:art: Chore: ページタイトルのスタイリングを修正

--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="container mx-auto px-4 py-8">
-  <h1 class="text-2xl font-bold text-center mb-6">プレイリスト編集</h1>
+<div class="container mx-auto px-4">
+  <h1 class="text-xl font-bold text-primary text-center border-b border-primary my-8">PLAYLIST EDIT</h1>
 
   <%= form_with model: @playlist, url: playlist_path(@playlist), method: :patch, class: "w-full max-w-2xl mx-auto bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" do |f| %>
     <div class="mb-4">
