--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -1,4 +1,5 @@
-<div class="container mx-auto my-8 p-4">
+<div class="container mx-auto px-4">
+  <h1 class="text-xl font-bold text-primary text-center border-b border-primary my-8">PLAYLIST DETAILS</h1>
 
   <div class="mb-6">
     <h1 class="text-center text-3xl font-black text-slate-600 mb-6"><%= @playlist.title %></h1>
