--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -11,7 +11,7 @@
   <%= render 'shared/flash' %>
 <% end %>
 
-<div class="flex justify-center items-start gap-8 ml-8">
+<div class="flex justify-center items-start ml-4">
   <div class="w-full lg:w-1/3 xl:w-2/3 mx-8 bg-white text-primary rounded-lg shadow p-4 max-h-[74vh] overflow-y-auto">
     <%= render 'playlists/playlist_preview', playlist: @playlist %>
   </div>
