:sparkles: Feat: プレビューでレンダリングするビューを_track_with_remove_buttonに変更

--- a/app/views/playlists/_playlist_preview.html.erb
+++ b/app/views/playlists/_playlist_preview.html.erb
@@ -4,7 +4,7 @@
     <% @playlist.tracks.each do |track| %>
       <%= turbo_frame_tag dom_id(track) do %>
         <div class="flex justify-between items-center mb-2">
-          <%= render "playlists/track", track: track %>
+          <%= render "playlists/track_with_remove_button", track: track %>
         </div>
       <% end %>
     <% end %>
