:sparkles: Feat: searchTrackPath変数をグローバルスコープに設定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
 
       gtag('config', 'G-G6YZ6YZJ30');
     </script>
+    <script>
+      var searchTracksPath = "<%= search_tracks_path(format: :json) %>";
+    </script>
   </head>
 
   <body class="flex flex-col min-h-screen">
