--- a/app/views/tracks/_search_results.html.erb
+++ b/app/views/tracks/_search_results.html.erb
@@ -6,10 +6,10 @@
         <div class="flex flex-wrap justify-center">
           <% @tracks.each do |track| %>
             <div class="flex justify-center p-1 ml-2 w-1/4 mx-8">
-              <% if track.id %>
+              <% if track[:id] %>
                 <div class="flex flex-col items-center md:flex-row md:justify-between md:items-end w-full">
-                  <iframe src="https://open.spotify.com/embed/track/<%= track.id %>" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                  <%= button_to 'add', add_track_to_playlist_playlists_path(track_id: track.id), method: :post, data: { turbo_frame: "playlist_preview" }, class: "p-1 btn btn-sm btn-outline btn-primary" %>
+                  <iframe src="https://open.spotify.com/embed/track/<%= track[:id] %>" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                  <%= button_to 'add', add_track_to_playlist_playlists_path(track_id: track[:id]), method: :post, data: { turbo_frame: "playlist_preview" }, class: "p-1 btn btn-sm btn-outline btn-primary" %>
                 </div>
               <% end %>
             </div>
