:art: Style: Xシェア時のテンプレートテキストを変更

--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -24,7 +24,7 @@
   </div>
   <%= render partial: 'playlists/good_vibes_button', locals: { playlist: @playlist } %>
   <% if @playlist.user == current_user %>
-      <%= link_to "https://twitter.com/share?url=#{playlist_url(@playlist)}&text=🎉Congratulations on releasing your playlist!🎉 %0a【#{@playlist.title}】%0a %23Mutro%0a", target: '_blank', data: { toggle: "tooltip", placement: "bottom" }, title: "Share to X" do %>
+      <%= link_to "https://twitter.com/share?url=#{playlist_url(@playlist)}&text=🎉 New playlist out now! 🎉 %0a【#{@playlist.title}】%0a %23Mutro%0a", target: '_blank', data: { toggle: "tooltip", placement: "bottom" }, title: "Share to X" do %>
         <i class="fa-brands fa-x-twitter fa-xl"></i>
       <% end %>
       <%= link_to 'プレイリスト編集', edit_playlist_path(@playlist), class: 'btn btn-primary m-4' %>
