:sparkles: Feat: プレイリスト詳細に投稿者名を表示するように変更

--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -2,9 +2,11 @@
   <h1 class="text-xl font-bold text-primary text-center border-b border-primary my-8">PLAYLIST DETAILS</h1>
 
   <div class="mb-6">
+    <div class="text-center mb-4">
+      <p class="text-sm font-medium text-gray-500">Released by <%= @playlist.user.name %></p>
+    </div>
     <h1 class="text-center text-3xl font-black text-slate-600 mb-6"><%= @playlist.title %></h1>
     <%= simple_format(@playlist.description, {}, wrapper_tag: "p", class: "text-slate-600") %>
-
   </div>
 
   <div class="tracks">
