--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar bg-base-100 border-b border-primary h-24">
   <div class="flex justify-between items-center w-full">
-    <div>
-      <%= link_to 'Mutro', root_path, class: "btn btn-ghost normal-case text-2xl text-white font-black bg-gradient-to-r from-primary to-accent" %>
-    </div>
+    <div class="ml-4">
+      <%= link_to image_tag('mutro_logo.png', width: 80), root_path %>
+   </div>
 
     <% if user_signed_in? %>
       <div class="flex items-center gap-3">
