:sparkles: Feat: アップデート情報ページを追加

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,12 @@
 <footer class="footer p-10 text-base-content">
   <aside>
-    <p class="text-slate-500">Copyright © 2023 - All right reserved by Mutro</p>
+    <p class="text-slate-500">Copyright © 2024 - All right reserved by Mutro</p>
   </aside>
   <div class="footer-links flex gap-8 text-slate-600">
     <%= link_to 'About "Mutro"', about_path, class: 'text-primary font-black' %>
     <%= link_to 'お問い合わせ', 'https://forms.gle/BL9XpXKsqMpg4zgJA' %>
     <%= link_to '利用規約', terms_path %> 
     <%= link_to 'プライバシーポリシー', privacy_policy_path %>
+    <%= link_to 'アップデート情報', update_info_path %>
   </div>
 </footer>
