--- a/app/views/static_pages/update_info.html.erb
+++ b/app/views/static_pages/update_info.html.erb
@@ -1,1 +1,26 @@
-アップデート情報
+<div class="container mx-auto px-4 max-w-4xl">
+  <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
+    <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/01/31 Wed.</h2>
+    <p class="text-lg text-gray-600">
+      Googleログイン機能を実装しました。</br>
+      これにより、Googleアカウントをお持ちの方は、Googleアカウントでログインすることができます。</br>
+    </p>
+  </div>
+
+  <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
+    <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/01/25 Thu.</h2>
+    <p class="text-lg text-gray-600">
+      オートコンプリートで表示された検索候補の選択を上下矢印キーで行えるようにしました。</br>
+    </p>
+  </div>
+  <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
+    <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/01/24 Wed.</h2>
+    <p class="text-lg text-gray-600">
+      - 曲検索フォームにオートコンプリート機能を追加しました。</br>
+      - "NEW RELEASES"に表示されるプレイリストを"12時間以内"に変更しました。</br>
+    </p>
+  </div>
+
+
+</div>
+
