--- a/app/views/static_pages/update_info.html.erb
+++ b/app/views/static_pages/update_info.html.erb
@@ -20,7 +20,12 @@
       - "NEW RELEASES"に表示されるプレイリストを"12時間以内"に変更しました。</br>
     </p>
   </div>
-
+  <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
+    <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/01/22 Mon.</h2>
+    <p class="text-lg text-gray-600 text-center">
+      Mutro（ミュトロ）をMVPリリースしました🎸</br>
+    </p>
+  </div>
 
 </div>
 
