:sparkles: Feat: アップデート情報を追加修正

--- a/app/views/static_pages/update_info.html.erb
+++ b/app/views/static_pages/update_info.html.erb
@@ -2,28 +2,30 @@
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
     <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/01/31 Wed.</h2>
     <p class="text-lg text-gray-600">
-      Googleログイン機能を実装しました。</br>
-      これにより、Googleアカウントをお持ちの方は、Googleアカウントでログインすることができます。</br>
+      ✔︎ Googleログイン機能を実装しました。</br>
+      既にMutroに登録済みのユーザーは、Googleログインを行うことで、既存のアカウントと紐付けることができます。</br>
+      ✔︎ Mutroのロゴを作成しました。</br>
+      ✔︎ Mutroのファビコンを作成しました。</br>
     </p>
   </div>
 
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
     <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/01/25 Thu.</h2>
     <p class="text-lg text-gray-600">
-      オートコンプリートで表示された検索候補の選択を上下矢印キーで行えるようにしました。</br>
+      ✔︎ オートコンプリートで表示された検索候補の選択を上下矢印キーで行えるようにしました。</br>
     </p>
   </div>
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
     <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/01/24 Wed.</h2>
     <p class="text-lg text-gray-600">
-      - 曲検索フォームにオートコンプリート機能を追加しました。</br>
-      - "NEW RELEASES"に表示されるプレイリストを"12時間以内"に変更しました。</br>
+      ✔︎ 曲検索フォームにオートコンプリート機能を追加しました。</br>
+      ✔︎ "NEW RELEASES"に表示されるプレイリストを"12時間以内"に変更しました。</br>
     </p>
   </div>
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
     <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/01/22 Mon.</h2>
     <p class="text-lg text-gray-600 text-center">
-      Mutro（ミュトロ）をMVPリリースしました🎸</br>
+      🎸 Mutro（ミュトロ）をMVPリリースしました。</br>
     </p>
   </div>
 
