--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,9 +1,13 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "ログイン", new_session_path(resource_name) %><br />
+  <div class="font-bold mb-4">
+    <%= link_to "ログイン", new_session_path(resource_name) %><br />
+  </div>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "ユーザー登録", new_registration_path(resource_name) %><br />
+  <div class="font-bold text-error mb-4">
+      <%= link_to "ユーザー登録", new_registration_path(resource_name) %><br />
+    </div>
 <% end %>
 
 <%# <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %1> %>
@@ -20,6 +24,18 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to "Sign in with Google", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+    <%- if controller_name == 'sessions' %>
+      <%= button_to omniauth_authorize_path(resource_name, provider), data: { turbo: false } do %>
+        <%= image_tag('sign_in_with_google.png', alt: 'Sign in with Google', width: 180, height: 40) %>
+      <% end %>
+      <br />
+    <% end %>
+
+    <%- if controller_name == 'registrations' %>
+      <%= button_to omniauth_authorize_path(resource_name, provider), data: { turbo: false } do %>
+        <%= image_tag('sign_up_with_google.png', alt: 'Sign up with Google', width: 180, height: 40) %>
+      <% end %>
+      <br />
+    <% end %>
   <% end %>
 <% end %>
