:sparkles: Feat: display_meta_tagsメソッドを追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+
+    <%= display_meta_tags(default_meta_tags) %>
+
     <script src="https://kit.fontawesome.com/b6cb3fd258.js" crossorigin="anonymous"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6YZ6YZJ30"></script>
     <script>
