:sparkles: Feat: アップデート情報を追加

--- a/app/views/static_pages/update_info.html.erb
+++ b/app/views/static_pages/update_info.html.erb
@@ -5,10 +5,10 @@
       ✔︎ Googleログイン機能を実装しました。</br>
       既にMutroに登録済みのユーザーは、Googleログインを行うことで、既存のアカウントと紐付けることができます。</br>
       ✔︎ Mutroのロゴを作成しました。</br>
-      ✔︎ Mutroのファビコンを作成しました。</br>
+      ✔︎ Mutroのファビコンを設定しました。</br>
+      ✔︎ MutroのOGPを設定しました。</br>
     </p>
   </div>
-
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
     <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/01/25 Thu.</h2>
     <p class="text-lg text-gray-600">
