--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,6 +6,7 @@
 
     <% if user_signed_in? %>
       <div class="flex items-center gap-3">
+        <%= link_to 'About "Mutro"', about_path, class: 'text-primary font-black' %>
         <%= link_to 'Release', new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" %>
         <%= link_to new_releases_playlists_path, class: "font-bold text-primary hover:text-secondary" do %>
           <i class="fa-solid fa-compact-disc" style="color: #05a1ad;"></i> NEW RELEASES
