--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,6 +11,9 @@
         <%= link_to new_releases_playlists_path, class: "font-bold text-primary hover:text-secondary" do %>
           <i class="fa-solid fa-compact-disc" style="color: #05a1ad;"></i> NEW RELEASES
         <% end %>
+        <%= link_to trend_picks_path, class: "font-bold text-primary hover:text-secondary" do %>
+          <i class="fa-solid fa-compact-disc" style="color: #05a1ad;"></i> TREND PICKS
+        <% end %>
         <div class="dropdown dropdown-end">
           <label tabindex="0" class="mr-4 ml-4">
             <i class="fa-solid fa-2xl fa-bars" style="color: #00a2ae;"></i>
