--- a/app/views/static_pages/update_info.html.erb
+++ b/app/views/static_pages/update_info.html.erb
@@ -1,5 +1,11 @@
 <div class="container mx-auto px-4 max-w-4xl">
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
+    <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/02/13 Tue.</h2>
+    <p class="text-lg text-gray-600">
+      ✔︎ レコメンド機能"Trend Picks"を実装しました。</br>
+    </p>
+  </div>
+  <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
     <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/01/31 Wed.</h2>
     <p class="text-lg text-gray-600">
       ✔︎ Googleログイン機能を実装しました。</br>
