--- a/app/views/playlists/trend_picks.html.erb
+++ b/app/views/playlists/trend_picks.html.erb
@@ -2,7 +2,7 @@
   <h1 class="text-xl font-bold text-primary border-b border-primary text-center my-8">TREND PICKS</h1>
   
   <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-16">
-    <% Playlist.most_popular.each do |playlist| %>
+    <% @playlists.each do |playlist| %>
       <%= render 'playlists/playlist', playlist: playlist %>
     <% end %>
   </div>
