--- a/app/views/static_pages/update_info.html.erb
+++ b/app/views/static_pages/update_info.html.erb
@@ -1,4 +1,12 @@
 <div class="container mx-auto px-4 max-w-4xl">
+    <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
+
+    <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/02/14 Wed.</h2>
+    <p class="text-lg text-gray-600">
+      ✔︎ レコメンド機能"Today's Picks"を実装しました。</br>
+    </p>
+  </div>
+
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
     <h2 class="text-xl font-bold text-center text-gray-600 mb-4">2024/02/13 Tue.</h2>
     <p class="text-lg text-gray-600">
