:sparkles: Feat: プレイリスト用画像の追加

--- a/app/views/playlists/_playlist.html.erb
+++ b/app/views/playlists/_playlist.html.erb
@@ -1,7 +1,7 @@
 <%= link_to playlist_path(playlist) do %>
   <div class="bg-slate-50 outline outline-1 outline-primary shadow-lg rounded-lg p-2 h-auto m-1 flex flex-col transition-transform duration-300 hover:-translate-y-2 hover:rotate-[-3deg]">
     <div class="text-center m-2">
-      <%= image_tag('default-playlist-image.png', class: "w-3/4 h-auto mx-auto rounded-full") %>
+      <%= image_tag('default-playlist-image.png', class: "w-3/4 h-auto mx-auto") %>
     </div>
     <h2 class="text-center text-sm font-bold text-secondary mb-2">
       <%= playlist.title %>
