--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,20 +6,20 @@
 
     <% if user_signed_in? %>
       <div class="flex items-center gap-3">
-        <%= link_to 'about "mutro"', about_path, class: 'text-primary font-black' %>
+        <%= link_to 'ABOUT "Mutro"', about_path, class: 'text-primary font-black' %>
 
-        <%= link_to 'release', new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" %>
+        <%= link_to 'RELEASE', new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" %>
 
         <%= link_to new_releases_playlists_path, class: "font-bold text-primary hover:text-secondary" do %>
-          <i class="fa-solid fa-compact-disc" style="color: #05a1ad;"></i> new releases
+          <i class="fa-solid fa-compact-disc" style="color: #05a1ad;"></i>NEW RELEASES
         <% end %>
 
         <%= link_to trend_picks_path, class: "font-bold text-primary hover:text-secondary" do %>
-          <i class="fa-solid fa-compact-disc" style="color: #05a1ad;"></i> trend picks
+          <i class="fa-solid fa-compact-disc" style="color: #05a1ad;"></i>TREND PICKS
         <% end %>
 
         <%= link_to todays_picks_path, class: "font-bold text-primary hover:text-secondary" do %>
-          <i class="fa-solid fa-compact-disc" style="color: #05a1ad;"></i> today's picks
+          <i class="fa-solid fa-compact-disc" style="color: #05a1ad;"></i>TODAY'S PICKS
         <% end %>
 
         <div class="dropdown dropdown-end">
