:sparkles: Feat: プレイリスト編集画面にMoodの変更のためのラジオボタンを追加

--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -24,6 +24,17 @@
       </ul>
     </div>
 
+    <div class="mb-4">
+      <%= f.label :mood_id, class: "block text-gray-700 text-lg font-bold mb-2" %>
+      <% Mood.all.each do |mood| %>
+        <div class="form-control">
+          <label class="label cursor-pointer">
+            <span class="label-text"><%= mood.name %></span>
+            <%= f.radio_button :mood_id, mood.id, class: "radio #{mood_radio_color(mood.name)}", checked: @playlist.mood_id == mood.id %>
+          </label>
+        </div>
+      <% end %>
+    </div>
 
     <div class="flex items-center justify-between">
       <%= f.submit "更新", class: "btn btn-primary" %>
