--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container mx-auto px-4">
-  <h1 class="text-xl font-bold text-primary text-center border-b border-primary my-8">ALL PLAYLISTS</h1>
+  <h1 class="text-xl font-bold text-primary text-center border-b border-primary my-8">プレイリスト一覧</h1>
   
   <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-8">
     <% @playlists.each do |playlist| %>
