--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,44 +1,41 @@
-<div class="navbar bg-base-100 border-b border-primary h-24">
+<div class="navbar bg-base-100 border-b border-primary h-24 w-full">
   <div class="flex justify-between items-center w-full">
     <div class="ml-4">
       <%= link_to image_tag('mutro_logo.png', width: 110), root_path %>
-   </div>
+    </div>
 
     <% if user_signed_in? %>
-      <div class="flex items-center gap-3">
-        <%= link_to 'ABOUT "Mutro"', about_path, class: 'text-primary font-black' %>
+      <div class="flex-1"></div>
+      <div class="flex flex-col md:flex-row items-center gap-3">
+        <%= link_to 'Mutroの使い方', about_path, class: 'text-primary font-black' %>
+        <%= link_to 'リリース', new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" %>
+      </div>
 
-        <%= link_to 'RELEASE', new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" %>
-
-        <%= link_to new_releases_playlists_path, class: "font-bold text-primary hover:text-secondary" do %>
-          <i class="fa-solid fa-compact-disc" style="color: #05a1ad;"></i>NEW RELEASES
-        <% end %>
-
-        <%= link_to trend_picks_path, class: "font-bold text-primary hover:text-secondary" do %>
-          <i class="fa-solid fa-compact-disc" style="color: #05a1ad;"></i>TREND PICKS
-        <% end %>
-
-        <%= link_to todays_picks_path, class: "font-bold text-primary hover:text-secondary" do %>
-          <i class="fa-solid fa-compact-disc" style="color: #05a1ad;"></i>TODAY'S PICKS
-        <% end %>
-
-        <div class="dropdown dropdown-end">
-          <label tabindex="0" class="mr-4 ml-4">
-            <i class="fa-solid fa-2xl fa-bars" style="color: #00a2ae;"></i>
-          </label>
-          <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 border-primary rounded-box w-52">
-            <li class="text-base font-bold text-primary">playlists</li>
-            <li class="text-primary"><%= link_to 'my playlists ', my_playlists_path %></li>
-            <li class="text-primary"><%= link_to 'my good vibes ', good_vibes_user_path(current_user) %></li>
-            <li class="text-base font-bold text-primary">settings</li>
-            <li><%= link_to 'my page', user_path(current_user), class: "text-primary" %></li>
-            <li><%= link_to 'log out', destroy_user_session_path, data: { turbo_method: :delete }, class: "font-bold text-error" %></li>
-          </ul>
-        </div>
+      <div class="dropdown dropdown-end">
+        <label tabindex="0" class="mr-4 ml-4">
+          <i class="fa-solid fa-2xl fa-bars" style="color: #00a2ae;"></i>
+        </label>
+        <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 border-primary rounded-box w-52">
+          <li class="text-base font-bold text-primary">プレイリストメニュー</li>
+          <li class="text-primary">
+            <%= link_to '新着リリース', new_releases_playlists_path, class: "text-primary hover:text-secondary" %>
+          </li>
+          <li class="text-primary">
+            <%= link_to 'トレンド', trend_picks_path, class: "text-primary hover:text-secondary" %>
+          </li>
+          <li class="text-primary">
+            <%= link_to '今日のレコメンド', todays_picks_path, class: "text-primary hover:text-secondary" %>
+          </li>
+          <li class="text-primary"><%= link_to 'リリースしたプレイリスト', my_playlists_path %></li>
+          <li class="text-primary"><%= link_to 'Good Vibes', good_vibes_user_path(current_user) %></li>
+          <li class="text-base font-bold text-primary">設定</li>
+          <li><%= link_to 'マイページ', user_path(current_user), class: "text-primary" %></li>
+          <li><%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: "font-bold text-error" %></li>
+        </ul>
       </div>
     <% else %>
       <%= link_to new_user_session_path, class: "mr-4" do %>
-          <i class="fa-solid fa-2xl fa-arrow-right-to-bracket" style="color: #ef857c;"></i>
+        <i class="fa-solid fa-2xl fa-arrow-right-to-bracket" style="color: #ef857c;"></i>
       <% end %>
     <% end %>
   </div>
