--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -69,6 +69,7 @@
   </div>
 
   <div class="flex justify-center">
-    <%= link_to 'ALL PLAYLISTS', root_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" %>
+    <%= link_to 'プレイリスト一覧へ戻る', root_path, class: "btn btn-sm border-primary text-primary bg-white hover:bg-secondary hover:text-white mr-2" %>
+    <%= link_to 'プレイリストをリリースする', new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" %>
   </div>
 </div>
