--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,23 +16,13 @@
           <% end %>
         </div>
       <div class="flex flex-col md:flex-row md:items-center">
-        <div class="ml-8">
+        <div>
           <% if user_signed_in? %>
             <%= link_to 'プロフィール編集', edit_user_registration_path, class: 'btn btn-sm btn-outline btn-primary' %>
           <% end %>
         </div>
       </div>
     </div>
-  </div>
-  <div class="mb-8">
-    <ul class="flex border-b border-primary">
-      <li class="-mb-px mr-1">
-        <%= link_to 'MY GOOD VIBES', good_vibes_user_path(current_user), class: "bg-white inline-block py-2 px-4 text-primary font-bold hover:shadow-lg mb-2" %>
-      </li>
-      <li class="mr-1">
-        <%= link_to 'MY COMMENTD', "#", class: "bg-white inline-block py-2 px-4 text-primary font-bold hover:shadow-lg mb-2" %>
-      </li>
-    </ul>
   </div>
 </div>
 
