--- a/app/views/playlists/todays_picks.html.erb
+++ b/app/views/playlists/todays_picks.html.erb
@@ -1,8 +1,8 @@
 <div class="container mx-auto px-4">
-  <h1 class="text-xl font-bold text-primary border-b border-primary text-center my-8">TODAY'S PICKS</h1>
+  <h1 class="text-xl font-bold text-primary border-b border-primary text-center my-8">今日のレコメンド</h1>
   
   <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-16">
-    <% @playlists.most_popular.each do |playlist| %>
+    <% @playlists.each do |playlist| %>
       <%= render 'playlists/playlist', playlist: playlist %>
     <% end %>
   </div>
