--- a/app/views/playlists/_playlist.html.erb
+++ b/app/views/playlists/_playlist.html.erb
@@ -10,7 +10,7 @@
     <h2 class="text-center text-sm font-bold text-secondary mb-2">
       <%= playlist.title %>
     </h2>
-    <div class="text-xs text-gray-500">
+    <div class="text-xs text-slate-500">
       <p>Released by：<%= playlist.user.name %></p>
       <p>Released on：<%= playlist.created_at.strftime("%Y/%m/%d") %></p>
     </div>
