--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,26 +1,24 @@
-<div class="container mx-auto px-4 py-8">
+<div class="container mx-auto px-4 py-8 text-slate-600">
   <div class="flex flex-col md:flex-row items-center md:items-start md:space-x-6 mb-8">
     <div class="flex flex-col items-center">
       <div class="w-24 h-24 rounded-full flex items-center justify-center border-2 border-gray-300 mb-4">
         Icon
       </div>
-      <h1 class="text-2xl font-bold text-gray-800"><%= current_user.name %></h1>
+      <h1 class="text-2xl font-bold"><%= current_user.name %></h1>
     </div>
     <div class="flex-1 md:ml-6">
       <p class="font-bold mb-4">About Me</p>
-        <div class="bg-slate-100 shadow-lg p-4 mb-4">
-          <% if current_user.bio.present? %>
-            <%= simple_format(current_user.bio, class: "text-gray-600") %>
-          <% else %>
-            <p class="text-gray-600">プロフィール情報はありません。</p>
-          <% end %>
-        </div>
+      <div class="bg-slate-100 shadow-lg p-4 mb-4">
+        <% if current_user.bio.present? %>
+          <%= simple_format(current_user.bio) %>
+        <% else %>
+          <p>プロフィール情報はありません。</p>
+        <% end %>
+      </div>
       <div class="flex flex-col md:flex-row md:items-center">
-        <div>
-          <% if user_signed_in? %>
-            <%= link_to 'プロフィール編集', edit_user_registration_path, class: 'btn btn-sm btn-outline btn-primary' %>
-          <% end %>
-        </div>
+        <% if user_signed_in? %>
+          <%= link_to 'プロフィール編集', edit_user_registration_path, class: 'btn btn-sm btn-outline btn-primary' %>
+        <% end %>
       </div>
     </div>
   </div>
