--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,30 +1,30 @@
 <div class="flex items-center justify-center min-h-screen">
   <div class="w-full max-w-md p-6 bg-white rounded-lg shadow-md">
-    <h2 class="text-center mb-6 text-4xl font-bold text-gray-700">ユーザー新規登録</h2>
+    <h2 class="text-center mb-6 text-4xl font-bold text-slate-600">ユーザー新規登録</h2>
 
     <%= form_with model: resource, as: resource_name, url: registration_path(resource_name) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="mb-4">
-        <%= f.label :name, class: "block text-sm font-bold text-gray-600 mb-2" %>
-        <%= f.text_field :name, class: "input input-sm input-bordered w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring focus:ring-opacity-50 focus:ring-indigo-300", autofocus: true %>
+        <%= f.label :name, class: "block text-sm font-bold mb-2" %>
+        <%= f.text_field :name, class: "input input-sm input-bordered w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring focus:ring-opacity-50 focus:ring-primary", autofocus: true %>
       </div>
 
       <div class="mb-4">
-        <%= f.label :email, class: "block text-sm font-bold text-gray-600 mb-2" %>
-        <%= f.email_field :email, class: "input input-sm input-bordered w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring focus:ring-opacity-50 focus:ring-indigo-300", autofocus: true, autocomplete: "email" %>
+        <%= f.label :email, class: "block text-sm font-bold mb-2" %>
+        <%= f.email_field :email, class: "input input-sm input-bordered w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring focus:ring-opacity-50 focus:ring-primary", autofocus: true, autocomplete: "email" %>
       </div>
 
       <div class="mb-4">
-        <%= f.label :password, class: "block text-sm font-bold text-gray-600 mb-2" %>
+        <%= f.label :password, class: "block text-sm font-bold mb-2" %>
         <% if @minimum_password_length %>
         <% end %>
-        <%= f.password_field :password, placeholder: "#{@minimum_password_length}文字以上", class: "input input-sm input-bordered w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring focus:ring-opacity-50 focus:ring-indigo-300", autocomplete: "new-password" %>
+        <%= f.password_field :password, placeholder: "#{@minimum_password_length}文字以上", class: "input input-sm input-bordered w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring focus:ring-opacity-50 focus:ring-primary", autocomplete: "new-password" %>
       </div>
 
       <div class="mb-4">
-        <%= f.label :password_confirmation, class: "block text-sm font-bold text-gray-600 mb-2" %>
-        <%= f.password_field :password_confirmation, class: "input input-sm input-bordered w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring focus:ring-opacity-50 focus:ring-indigo-300", autocomplete: "new-password" %>
+        <%= f.label :password_confirmation, class: "block text-sm font-bold mb-2" %>
+        <%= f.password_field :password_confirmation, class: "input input-sm input-bordered w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring focus:ring-opacity-50 focus:ring-primary", autocomplete: "new-password" %>
       </div>
 
       <button type="submit" class="btn btn-sm btn-primary w-full py-2 px-4 font-bold rounded-md shadow">
