:adhesive_bandage: Chore: Mutroの使い方ページ微修正

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,17 +3,16 @@
   <div class="hero-content text-center text-primary-content">
     <div class="max-w-md">
       <h1 class="mb-5 text-5xl font-black text-primary">About "Mutro"</h1>
-      <p class="mb-5 text-primary-content">Mutro（ミュトロ）は</br>
-        「音楽とゆっくり向き合う」ことを目的とした</br>
-        プレイリスト投稿・共有サービスです。</br></br>
-        "みんなに知ってほしい曲を詰め込んだプレイリスト"</br>
-        "聴いてほしいシチュエーションをイメージしたプレイリスト"</br>
-        "思い出の曲を詰め込んだプレイリスト"</br></br>
-
-        いつもより少しだけ時間をかけて</br>
-        音楽と向き合ってみませんか？</br>
+      <p class="mb-5 text-primary-content">
+        Mutro（ミュトロ）は<br>
+        「音楽とゆっくり向き合う」ことを目的とした<br>
+        プレイリスト投稿・共有サービスです。<br><br>
+        "みんなに知ってほしい曲を詰め込んだプレイリスト"<br>
+        "聴いてほしいシチュエーションをイメージしたプレイリスト"<br>
+        "思い出の曲を詰め込んだプレイリスト"<br><br>
+        いつもより少しだけ時間をかけて<br>
+        音楽と向き合ってみませんか？<br>
       </p>
-
     </div>
   </div>
 </div>
@@ -21,50 +20,36 @@
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
     <h2 class="text-2xl font-black text-center text-primary mb-4">未ログイン時でも使える機能</h2>
     <p class="text-lg text-gray-600">
-      ・ALL PLAYLISTS（プレイリスト一覧）</br>
-      ・PLAYLIST DETAILS（プレイリスト詳細）</br>
+      ・プレイリスト一覧<br>
+      ・プレイリスト詳細<br>
     </p>
   </div>
 
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
     <h2 class="text-2xl font-black text-center text-primary mb-4">ログイン時の追加機能</h2>
     <p class="text-lg text-gray-600">
-      ・RELEASE（プレイリスト作成）機能</br>
-      ・プレイリスト編集</br>
-      ・プレイリスト削除</br>
-      ・GOOD VIBES（いいね機能）</br>
-      ・COMMENTS（コメント機能）</br>
-      ・NEW RELEASE（新着プレイリスト一覧）</br>
-      ・MY PLAYLISTS（自分の作成したプレイリスト一覧）</br>
-      ・MY GOOD VIBES（いいねしたプレイリスト一覧）</br>
-      ・MY PAGE（自分のプロフィールページ）</br>
-      ・プロフィール編集</br>
-    </p>
-  </div>
-
-  <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
-    <h2 class="text-2xl font-black text-center text-primary mb-4">ログイン時の追加機能</h2>
-    <p class="text-lg text-gray-600">
-      ・RELEASE（プレイリスト作成）機能</br>
-      ・プレイリスト編集</br>
-      ・プレイリスト削除</br>
-      ・GOOD VIBES（いいね機能）</br>
-      ・NEW RELEASE（新着プレイリスト一覧）</br>
-      ・MY PLAYLISTS（自分の作成したプレイリスト一覧）</br>
-      ・MY GOOD VIBES（いいねしたプレイリスト一覧）</br>
-      ・MY PAGE（自分のプロフィールページ）</br>
-      ・プロフィール編集</br>
+      ・リリース（プレイリスト作成）機能<br>
+      ・プレイリスト編集<br>
+      ・プレイリスト削除<br>
+      ・GOOD VIBES（いいね）機能<br>
+      ・コメント機能<br>
+      ・新着リリース<br>
+      ・トレンド<br>
+      ・リリースしたプレイリスト一覧<br>
+      ・Good Vibes（いいねしたプレイリスト）一覧<br>
+      ・マイページ<br>
+      ・プロフィール編集<br>
     </p>
   </div>
 
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
     <h2 class="text-2xl font-black text-center text-accent mb-4">プレイリストをリリースするには？</h2>
     <p class="text-lg text-gray-600">
-      1：ヘッダーの"RELEASE"をクリック</br>
-      2: 曲検索フォームにアーティスト名や曲名を入力</br>
-      3: 検索結果からプレイリストに追加したい曲を"ADD"ボタンで追加</br>
-      4: プレイリストのタイトルや説明文を入力</br>
-      5: "RELEASE A PLAYLIST!"ボタンをクリック</br>
+      1：ヘッダーの"リリース"をクリック<br>
+      2: 曲検索フォームにアーティスト名や曲名を入力<br>
+      3: 検索結果からプレイリストに追加したい曲の"追加"ボタンをクリック<br>
+      4: プレイリストのタイトルやレコメンド文を入力<br>
+      5: "RELEASE A PLAYLIST!"ボタンをクリック<br>
     </p>
   </div>
 
