:art: Style: アップデート情報の内容微修正

--- a/app/views/static_pages/update_info.html.erb
+++ b/app/views/static_pages/update_info.html.erb
@@ -1,5 +1,4 @@
 <div class="container mx-auto px-4 max-w-4xl text-slate-600">
-  <!-- Section共通クラス -->
   <style>
     .section {
       margin: 2.5rem 0;
@@ -10,16 +9,17 @@
   </style>
 
   <div class="section">
-    <h2 class="text-xl font-bold text-center mb-4">2024/02/14 Wed.</h2>
+    <h2 class="text-xl font-bold text-center mb-4">2024/02/13 Tue.</h2>
     <p class="text-lg">
-      ✔︎ レコメンド機能"Today's Picks"を実装しました。<br>
+      ✔︎ レコメンド機能"トレンド"を実装しました。<br>
     </p>
   </div>
+  
 
   <div class="section">
     <h2 class="text-xl font-bold text-center mb-4">2024/02/13 Tue.</h2>
     <p class="text-lg">
-      ✔︎ レコメンド機能"Trend Picks"を実装しました。<br>
+      ✔︎ レコメンド機能"トレンド"を実装しました。<br>
     </p>
   </div>
 
@@ -45,7 +45,7 @@
     <h2 class="text-xl font-bold text-center mb-4">2024/01/24 Wed.</h2>
     <p class="text-lg">
       ✔︎ 曲検索フォームにオートコンプリート機能を追加しました。<br>
-      ✔︎ "NEW RELEASES"に表示されるプレイリストを"12時間以内"に変更しました。<br>
+      ✔︎ "新着リリース"に表示されるプレイリストを"12時間以内"に変更しました。<br>
     </p>
   </div>
 
